--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.2.0",
     "next": "14.2.4",
     "next-cloudinary": "^6.6.2",
     "react": "^18",
